--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14422,6 +14422,15 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 !important;
   box-shadow: none !important;
 }
+@media screen and (min-width: 1024px) {
+  .sidebar {
+    position: sticky !important;
+    top: 2.5em !important;
+    height: auto !important;
+    overflow-y: visible !important;
+    padding-top: 0 !important;
+  }
+}
 
 .author__avatar img {
   border-radius: 50% !important;
